--- a/transcoder_service/package.json
+++ b/transcoder_service/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "upload_service",
+  "name": "transcoder_service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1682.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "kafkajs": "^2.2.4",
-    "multer": "^1.4.5-lts.1"
+    "kafkajs": "^2.2.4"
   }
 }
